[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/bg/bg.jpg" type="Texture" id=1]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=4]
[ext_resource path="res://Menus/store/store_menu.gd" type="Script" id=5]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=8]
size = 36
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.25098, 0.513726, 0.0313726, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.768627, 0.772549, 0.0588235, 1 )
shadow_size = 5

[node name="store_menu" type="CanvasLayer"]
layer = 0
script = ExtResource( 5 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -374.909
margin_top = -281.909
margin_right = 395.091
margin_bottom = 335.091
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -294.5
margin_top = -235.0
margin_right = 294.5
margin_bottom = 235.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sw" type="Button" parent="Panel/VBoxContainer"]
margin_right = 589.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Select Weapon"

[node name="ss" type="Button" parent="Panel/VBoxContainer"]
margin_top = 130.0
margin_right = 589.0
margin_bottom = 210.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Select Skin"

[node name="bw" type="Button" parent="Panel/VBoxContainer"]
margin_top = 260.0
margin_right = 589.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Buy Weapons"

[node name="bs" type="Button" parent="Panel/VBoxContainer"]
margin_top = 390.0
margin_right = 589.0
margin_bottom = 470.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Buy Skins"

[node name="back" type="Button" parent="."]
anchor_left = 0.084
anchor_top = 0.915
anchor_right = 0.084
anchor_bottom = 0.915
margin_left = -54.52
margin_top = -19.8
margin_right = 55.48
margin_bottom = 20.2
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 9 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="cash" type="Button" parent="."]
anchor_left = 0.911
anchor_top = 0.472
anchor_right = 0.911
anchor_bottom = 0.472
margin_left = -81.0801
margin_top = -66.84
margin_right = 86.9199
margin_bottom = 66.16
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 8 )
text = "Get cash"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/VBoxContainer/sw" to="." method="_on_sw_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ss" to="." method="_on_ss_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/bw" to="." method="_on_bw_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/bs" to="." method="_on_bs_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="cash" to="." method="_on_cash_pressed"]
